feat: adiciona estilos e marcação para listagem dos cards de episodio

--- a/styles/main.css
+++ b/styles/main.css
@@ -22,7 +22,18 @@
   --gray-900: #0f172a;
   --gray-950: #020617;
 
+  --blue-50: #eff6ff;
   --blue-100: #dbeafe;
+  --blue-200: #bfdbfe;
+  --blue-700: #1d4ed8;
+  --blue-900: #1e3a8a;
+
+  --red-50: #fef2f2;
+  --red-200: #fecaca;
+  --red-700: #991b1b;
+
+  --box-shadow-md: 0 4px 6px -1px rgb(0 0 0 / 0.1),
+    0 2px 4px -2px rgb(0 0 0 / 0.1);
 }
 
 body {
@@ -36,7 +47,14 @@ h2,
 h3,
 h4,
 h5 {
+  color: var(--gray-900);
   font-weight: 500;
+}
+
+.no-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .view {
@@ -49,18 +67,66 @@ h5 {
   max-width: var(--container-max-width);
 }
 
+.cover {
+  align-self: flex-start;
+  aspect-ratio: 1/1;
+  background-color: var(--gray-100);
+  border-radius: var(--border-radius-sm);
+  box-shadow: var(--box-shadow-md);
+  min-width: 100px;
+  overflow: hidden;
+}
+
+/* Estilos relacionados a botões e call-to-actions */
+.cta {
+  align-items: center;
+  border: 0;
+  border-radius: var(--border-radius-xs);
+  cursor: pointer;
+  display: inline-flex;
+  font-weight: 600;
+  gap: 0.5rem;
+  padding: 0 0.5rem;
+}
+
+.cta--primary {
+  color: #ffffff;
+  background-color: var(--blue-700);
+}
+
+.cta--primary:hover {
+  background-color: var(--blue-900);
+}
+
+.cta-icon {
+  width: 20px;
+}
+
+.cta--only-icon {
+  background-color: var(--gray-50);
+  padding: 0.5rem;
+}
+
+.cta--only-icon:hover {
+  background-color: var(--gray-200);
+}
+
+.cta--edit:hover {
+  background-color: var(--blue-200);
+}
+
+.cta--delete:hover {
+  background-color: var(--red-200);
+}
+
+/* Estilos para o profile */
 .podcast-profile {
   display: flex;
   gap: var(--container-horizontal-spacing);
 }
 
 .podcast-profile__cover {
-  aspect-ratio: 1/1;
-  background-color: var(--gray-100);
-  border-radius: var(--border-radius-sm);
-  box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   flex: 1;
-  overflow: hidden;
 }
 
 .podcast-profile__info {
@@ -68,7 +134,6 @@ h5 {
 }
 
 .podcast-profile__title {
-  color: var(--gray-900);
   font-size: 2.25rem;
   line-height: 2.5rem;
 }
@@ -87,4 +152,79 @@ h5 {
   border-top: solid 1px var(--gray-200);
   padding: 1rem 0 0 0;
   margin: 1.5rem 0 0 0;
+}
+
+/* Estilos para listagem */
+.episodios {
+  margin: 5rem 0 0 0;
+}
+
+.episodios__header {
+  display: flex;
+  gap: var(--container-horizontal-spacing);
+}
+
+.episodios__list {
+  display: flex;
+  gap: var(--container-horizontal-spacing);
+  flex-wrap: wrap;
+  margin: 1.5rem 0 0 0;
+}
+
+.episodios__item {
+  background: #ffffff;
+  border: solid 1px var(--gray-200);
+  border-radius: var(--border-radius-sm);
+  display: flex;
+  flex-direction: column;
+  gap: var(--container-horizontal-spacing);
+  padding: var(--container-horizontal-spacing);
+}
+
+.episodios-item__main {
+  display: flex;
+  gap: var(--container-horizontal-spacing);
+}
+
+.episodios-item__cover {
+  flex: 1;
+}
+
+.episodios-item__info {
+  flex: 4;
+}
+
+.episodios-item__header {
+  align-items: center;
+  display: flex;
+  gap: var(--container-horizontal-spacing);
+}
+
+.episodios-item__actions {
+  display: flex;
+  flex-shrink: 0;
+  gap: 0.25rem;
+}
+
+.episodios-item__description {
+  border-top: solid 1px var(--gray-200);
+  margin: 1rem 0 0 0;
+  padding: 1rem 0 0 0;
+}
+
+.episodios-item__audio-info {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.episodios-item__caption {
+  color: var(--gray-500);
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
+.episodios-item__player {
+  display: flex;
+  width: 100%;
 }
