--- a/styles/main.css
+++ b/styles/main.css
@@ -80,6 +80,7 @@ h5 {
 /* Estilos relacionados a botões e call-to-actions */
 .cta {
   align-items: center;
+  background-color: var(--gray-100);
   border: 0;
   border-radius: var(--border-radius-xs);
   cursor: pointer;
@@ -87,6 +88,14 @@ h5 {
   font-weight: 600;
   gap: 0.5rem;
   padding: 0 0.5rem;
+}
+
+.cta:hover {
+  background-color: var(--gray-200);
+}
+
+.cta--button {
+  padding: 0.5rem 1rem;
 }
 
 .cta--primary {
@@ -227,4 +236,93 @@ h5 {
 .episodios-item__player {
   display: flex;
   width: 100%;
+}
+
+/* Estilos do modal */
+.dialog-root {
+  background: rgba(0, 0, 0, 0.4);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  backdrop-filter: blur(1px);
+}
+
+.dialog {
+  max-width: 600px;
+  width: calc(100% - (var(--container-horizontal-spacing) * 2));
+  left: 50%;
+  transform: translate(-50%, 0);
+  box-shadow: var(--box-shadow-md);
+  border-radius: var(--border-radius-sm);
+  border: 0;
+  padding: var(--container-horizontal-spacing);
+  max-height: calc(100vh - 10%);
+  display: flex;
+  flex-direction: column;
+}
+
+.dialog__header {
+  align-items: center;
+  display: flex;
+  gap: var(--container-horizontal-spacing);
+  justify-content: space-between;
+}
+
+.dialog-header__title {
+  font-weight: 600;
+}
+
+.dialog__footer {
+  border-top: solid 1px var(--gray-200);
+  display: flex;
+  justify-content: flex-end;
+  gap: 0.5rem;
+  margin: var(--container-horizontal-spacing) 0 0 0;
+  padding: var(--container-horizontal-spacing) 0 0 0;
+}
+
+.dialog__content {
+  margin: 1rem 0 0 0;
+  overflow: auto;
+}
+
+/* Form styles */
+.form {
+  width: 100%;
+}
+
+.form > * + * {
+  margin: 1rem 0 0 0;
+}
+
+.form label {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  display: block;
+  width: 100%;
+}
+
+.form__label--is-required {
+  color: var(--red-700);
+  font-weight: 600;
+}
+
+.form input,
+.form textarea {
+  background: var(--gray-50);
+  border: solid 1px var(--gray-300);
+  border-radius: var(--border-radius-sm);
+  color: var(--gray-900);
+  padding: 0.75rem;
+  width: 100%;
+}
+
+.form * + input,
+.form * + textarea {
+  margin-top: 0.25rem;
 }
